external-crates/move/crates/move-compiler/tests/move_check/parser/function_return_type_missing.move
module 0x42::M {
    // Test a missing return type (but with a colon)
    fun f(): { }
}
